force-app/main/default/objects/JF_SF_Field_Mapping__c/JF_SF_Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>JF SF Field Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Json Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JF SF Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>