force-app/main/default/objects/JF_SF_Field_Mapping__c/fields/ChildObjectName1__c.field-meta.xml
<CustomField>
    <fullName>ChildObjectName1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ChildObjectName1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>