force-app/main/default/objects/JF_SF_Field_Mapping__c/fields/ChildObjectName2__c.field-meta.xml
<CustomField>
    <fullName>ChildObjectName2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ChildObjectName2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>