force-app/main/default/objects/JF_SF_Field_Mapping__c/fields/Mandatory_Field__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory Field</label>
    <type>Checkbox</type>
</CustomField>