force-app/main/default/objects/JF_SF_Field_Mapping__c/fields/ObjectNames1__c.field-meta.xml
<CustomField>
    <fullName>ObjectNames1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ObjectNames1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>