force-app/main/default/objects/JF_SF_Field_Mapping__c/fields/ObjectNames2__c.field-meta.xml
<CustomField>
    <fullName>ObjectNames2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ObjectNames2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>