force-app/main/default/objects/JF_SF_Field_Mapping__c/fields/Output_JSON_Field__c.field-meta.xml
<CustomField>
    <fullName>Output_JSON_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Output JSON Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>