force-app/main/default/objects/JF_SF_Field_Mapping__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>RecordType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Input JSON</fullName>
            </value>
            <value>
                <fullName>Output JSON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>