force-app/main/default/objects/JF_SF_Field_Mapping__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>JF SF Field Mappings</relationshipLabel>
    <relationshipName>JF_SF_Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>