force-app/main/default/objects/JF_SF_Field_Mapping__c/fields/SF_Object2_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>SF_Object2_Field_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SF Object2 Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>