force-app/main/default/objects/JF_SF_Field_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SF_Object1_Field_Name__c</columns>
    <columns>Service_Type__c</columns>
    <columns>RecordType__c</columns>
    <columns>ChildObjectName1__c</columns>
    <columns>ObjectNames1__c</columns>
    <columns>SF_Object2_Field_Name__c</columns>
    <columns>ChildObjectName2__c</columns>
    <columns>Output_JSON_Field__c</columns>
    <columns>ObjectNames2__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>